<resources>
    <string name="app_name">RIRI</string>
    <string name="welcome_text">Selamat datang di RIRI!</string>
    <string name="tagline">Berikan Kemudahan di Setiap Permasalahan</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="birth_place">Tempat</string>
    <string name="password">Kata Sandi</string>
    <string name="re_password">Re-type Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="or">atau</string>
    <string name="register_google">Daftar dengan Google</string>
    <string name="birth_date">Tanggal lahir</string>
    <string name="logo_company">logo company</string>
    <string name="login_google">Masuk dengan Google</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="login">Masuk</string>
    <string name="home">Beranda</string>
    <string name="chat">Pesan</string>
    <string name="notification">Notifikasi</string>
    <string name="profile">Profil</string>
    <string name="report">Laporan</string>
    <string name="news">Berita</string>
    <string name="rating">Ulasan</string>
    <string name="instansi">Instansi</string>
    <string name="forum">Forum Diskusi</string>
    <string name="history">Riwayat Laporan</string>
    <string name="statistic_report">Statistik Laporan</string>
    <string name="emergency_contact">Kontak Darurat</string>
    <string name="term_condition_login">Dengan daftar ke aplikasi Riri, kamu menyetujui segala Syarat dan Ketentuan dan Kebijakan Privasi Riri</string>
    <string name="ask_account_login">Belum punya akun?</string>
    <string name="daftar_disini">Daftar di sini</string>
    <string name="masuk_di_sini">Masuk di sini</string>
    <string name="ask_account_regis">Sudah punya akun?</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_password">Edit Kata Sandi</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="rating_kami">Rating Kami</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="keluar">Keluar</string>
    <string name="profile_picture">profile picture</string>
    <string name="create_discussion">Create Discussion</string>
    <string name="judul_laporan">Judul laporan</string>
    <string name="kategori_laporan">Kategori Laporan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lokasi">Lokasi</string>
    <string name="detail_lokasi">Detail Lokasi</string>
    <string name="ambil_bukti_foto">Ambil Bukti Foto</string>
    <string name="pernyataan">Pernyataan</string>
    <string name="isi_pernyataan">Laporan yang saya buat benar dan dapat dipertanggung jawabkan</string>
    <string name="jawaban_pernyataan">Ya, saya setuju</string>
    <string name="kirim">Kirim</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tanggal_laporan">10/11/2023</string>
    <string name="set_location">Atur Lokasi</string>
    <string name="tab_verifikasi">Verifikasi</string>
    <string name="tab_diproses">Diproses</string>
    <string name="tab_ditolak">Ditolak</string>
    <string name="tab_selesai">Selesai</string>
    <string name="date">27/10/2023</string>
    <string name="share">share</string>
    <string name="comment">comment</string>
    <string name="judul_diskusi">Judul Diskusi</string>
    <string name="isi_diskusi">Isi Diskusi</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="unggah">Unggah</string>
    <string name="like">Like</string>
    <string name="forum_diskusi">Forum Diskusi</string>
    <string name="pesan">Pesan</string>
    <string name="laporan">Laporan</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="forgot_description">Masukan email untuk mengatur ulang kata sandi anda!</string>
    <string name="simpan">Simpan</string>
    <string name="riwayat_laporan">Riwayat Laporan</string>
    <string name="berita">Berita</string>
    <string name="title_news">Title News</string>
    <string name="image_news">Image News</string>
    <string name="cari">Cari</string>
    <string name="sumber">Sumber</string>
    <string name="carousel_background">carousel background</string>
    <string name="carousel_title">carousel title</string>
    <string name="carousel_description">carousel description</string>
    <string name="tuliskan_sesuatu">Tuliskan sesuatu…</string>
    <string name="send_button">send button</string>
    <string name="urutkan">Urutkan</string>
    <string name="author_news">%1$s %2$s</string>
    <string name="fitur_belum_tersedia">Fitur Belum Tersedia</string>
    <string name="kategori_penanganan">Kategori Penanganan</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="laporan_ditolak">Laporan Ditolak</string>
    <string name="laporan_diterima">Laporan Diterima</string>
    <string name="laporan_akan_segera_diproses">Laporan akan segera diproses.</string>
    <string name="laporan_anda_terdeteksi_spam">Laporan anda terdeteksi spam.</string>
    <string name="ulangi">Ulangi Pelaporan</string>
    <string name="lanjutkan">Lihat Riwayat</string>
    <string name="lokasi_saya">Lokasi Saya</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="likes">%1$s likes</string>
    <string name="report_result">Report Result</string>
    <string name="anda_yakin_ingin_keluar">Anda yakin ingin keluar?</string>
</resources>