<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/item_chat"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chat" />
    <item
        android:id="@+id/item_notif"
        android:enabled="true"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notification" />
    <item
        android:id="@+id/item_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile" />
</menu>