<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    android:backgroundTint="@color/white"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_result_report"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/report_result"
            android:src="@drawable/declined_report" />

        <TextView
            android:id="@+id/tv_result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/laporan_ditolak"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_result_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            android:text="@string/laporan_anda_terdeteksi_spam"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_action"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/ulangi"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>