<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lupa_kata_sandi"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_description"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.riridev.ririapp.ui.custom.EditTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:inputType="text|textEmailAddress"
                android:maxLines="1"
                android:typeface="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.riridev.ririapp.ui.custom.CustomButton
            android:id="@+id/btn_send_forgot"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/kirim"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>