<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keluar"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/anda_yakin_ingin_keluar"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tidak"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                android:layout_weight="1"/>

            <com.riridev.ririapp.ui.custom.CustomButton
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ya"
                android:layout_marginStart="4dp"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
                android:layout_weight="1" />

        </LinearLayout>



    </LinearLayout>

</com.google.android.material.card.MaterialCardView>