<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/indicator_process_history"
            app:layout_constraintBottom_toBottomOf="@+id/date_upload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />

        <TextView
            android:id="@+id/yourname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_disccuss"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/date_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:text="@string/date"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/yourname"
            app:layout_constraintStart_toStartOf="@+id/yourname"
            app:layout_constraintTop_toBottomOf="@+id/yourname" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_disccuss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:maxHeight="250dp"
            android:minHeight="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_upload"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/poppins_semibold"
            android:maxLines="2"
            android:text="@string/judul_laporan"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_disccuss"
            app:layout_constraintStart_toStartOf="@+id/iv_disccuss"
            app:layout_constraintTop_toBottomOf="@+id/iv_disccuss" />


        <TextView
            android:id="@+id/description_discuss"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:maxLength="255"
            android:maxLines="3"
            android:text="@string/deskripsi"
            app:layout_constraintBottom_toTopOf="@+id/btn_comment"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageButton
            android:id="@+id/btn_comment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/comment"
            android:src="@drawable/outline_comment_24"
            app:layout_constraintEnd_toStartOf="@id/btn_share"
            app:layout_constraintTop_toTopOf="@id/btn_share" />

        <ImageButton
            android:id="@+id/btn_like"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/like"
            android:src="@drawable/baseline_thumb_up_off_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/btn_share"
            app:layout_constraintEnd_toStartOf="@+id/btn_comment"
            app:layout_constraintTop_toTopOf="@+id/btn_share" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:src="@drawable/outline_share_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_discuss" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>